Ajustes en el main.